--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -65,7 +65,7 @@
         <div class="horizontal">
           <!--     <div class="card"></div> -->
 
-          <img src="../img/foto61.jpgalt="imagen de escultura en praga ubicada enun puente">
+          <img src="../img/foto61.jpg" alt="imagen de escultura en praga ubicada enun puente">
         </div>
         <div class="vertical"><img src="../img/foto66.jpg" alt=" imagen de la estatua de la la libertad"></div>
         <div class="horizontal"><img src="../img/FOTO106.jpg" alt="imagen del valle de la muerte arizona"></div>
